--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
     "babel": "^6.23.0",
+    "babel-loader": "^8.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "webpack": "^5.67.0"
   },
   "devDependencies": {
