--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.3",
+    "nvm": "^0.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.67.0"
